--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "socket.io": "^4.2.0",
     "standard": "^16.0.3"
   },
   "eslintConfig": {
